// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should copy quiz on Put (copy) 1`] = `
Object {
  "date": "2100-01-31T23:00:00",
  "location": "location",
  "maxSubscriptions": 20,
  "modifiedOn": Any<String>,
  "quizId": 2,
  "remark": "remark",
  "rounds": Array [],
  "searchField": Any<String>,
  "shortId": Any<String>,
  "status": 1,
  "subscriptions": null,
  "title": "updated title - copy",
}
`;

exports[`should create quiz on Post 1`] = `
Object {
  "date": "2100-01-31T23:00:00Z",
  "location": "location",
  "maxSubscriptions": 20,
  "modifiedOn": Any<String>,
  "quizId": 1,
  "remark": "remark",
  "rounds": Array [
    Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
  ],
  "searchField": Any<String>,
  "shortId": Any<String>,
  "status": 1,
  "subscriptions": null,
  "title": "title",
}
`;

exports[`should delete quiz on Delete 1`] = `Array []`;

exports[`should delete quiz on Delete 2`] = `Array []`;

exports[`should get quiz on Get (open) 1`] = `
Array [
  Object {
    "date": "2100-01-31T23:00:00",
    "location": "location",
    "maxSubscriptions": 20,
    "modifiedOn": Any<String>,
    "quizId": 1,
    "remark": "remark",
    "rounds": Array [
      Object {
        "modifiedOn": Any<String>,
        "questions": null,
        "remark": "remark",
        "roundId": 1,
        "searchField": Any<String>,
        "shortId": Any<String>,
        "theme": "theme",
        "title": "title",
      },
    ],
    "searchField": Any<String>,
    "shortId": Any<String>,
    "status": 2,
    "subscriptions": Array [],
    "title": "updated title",
  },
]
`;

exports[`should get quiz on Get (search) 1`] = `
Array [
  Object {
    "date": "2100-01-31T23:00:00",
    "location": "location",
    "maxSubscriptions": 20,
    "modifiedOn": Any<String>,
    "quizId": 1,
    "remark": "remark",
    "rounds": Array [
      Object {
        "modifiedOn": Any<String>,
        "questions": null,
        "remark": "remark",
        "roundId": 1,
        "searchField": Any<String>,
        "shortId": Any<String>,
        "theme": "theme",
        "title": "title",
      },
    ],
    "searchField": Any<String>,
    "shortId": Any<String>,
    "status": 1,
    "subscriptions": Array [],
    "title": "title",
  },
]
`;

exports[`should get quiz on Get (shortId) 1`] = `
Object {
  "date": "2100-01-31T23:00:00",
  "location": "location",
  "maxSubscriptions": 20,
  "modifiedOn": Any<String>,
  "quizId": 1,
  "remark": "remark",
  "rounds": Array [
    Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
  ],
  "searchField": Any<String>,
  "shortId": Any<String>,
  "status": 1,
  "subscriptions": Array [],
  "title": "title",
}
`;

exports[`should get quiz on Get 1`] = `
Object {
  "date": "2100-01-31T23:00:00",
  "location": "location",
  "maxSubscriptions": 20,
  "modifiedOn": Any<String>,
  "quizId": 1,
  "remark": "remark",
  "rounds": Array [
    Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
  ],
  "searchField": Any<String>,
  "shortId": Any<String>,
  "status": 1,
  "subscriptions": Array [],
  "title": "title",
}
`;

exports[`should update quiz on Put (status) 1`] = `
Object {
  "date": "2100-01-31T23:00:00",
  "location": "location",
  "maxSubscriptions": 20,
  "modifiedOn": Any<String>,
  "quizId": 1,
  "remark": "remark",
  "rounds": Array [
    Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
  ],
  "searchField": Any<String>,
  "shortId": Any<String>,
  "status": 2,
  "subscriptions": Array [],
  "title": "updated title",
}
`;

exports[`should update quiz on Put 1`] = `
Object {
  "date": "2100-01-31T23:00:00Z",
  "location": "location",
  "maxSubscriptions": 20,
  "modifiedOn": Any<String>,
  "quizId": 1,
  "remark": "remark",
  "rounds": Array [
    Object {
      "modifiedOn": Any<String>,
      "questions": null,
      "remark": "remark",
      "roundId": 1,
      "searchField": Any<String>,
      "shortId": Any<String>,
      "theme": "theme",
      "title": "title",
    },
  ],
  "searchField": Any<String>,
  "shortId": Any<String>,
  "status": 1,
  "subscriptions": null,
  "title": "updated title",
}
`;
